namecpp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namecpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: namecpp
  template:
    metadata:
      labels:
        app: namecpp
    spec:
      containers:
        - image: sofianemoulay/namecpp:1
          imagePullPolicy: IfNotPresent
          name: namecpp
      restartPolicy: Always
