namecpp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namecpp
spec:
  ports:
    - nodePort: 31580
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: namecpp
  type: NodePort
